# SmartHome-AgenticAI-Simulation

./: API.md  CONTRIBUTING.md  LICENSE  README.md  deploy-website.yml
.github/workflows/: deploy-website-static.yml  deploy-website.yml
UnitySimulation/: .gitignore  API.md  README.md  UpgradeLog2.htm
UnitySimulation/Assets/: DeviceController.cs  Exhaust.cs  HDRIEnv.mat  IotManager.cs
UnitySimulation/Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineGlobalSettings.asset
UnitySimulation/Assets/Scenes/: New Scene.unity  SampleScene.unity
UnitySimulation/Assets/Scenes/SampleScene/: LightingData.asset  ReflectionProbe-0.exr  ReflectionProbe-1.exr  ReflectionProbe-2.exr
UnitySimulation/Assets/Scripts/: ACController.cs  FanController.cs  FridgeController.cs  InductionController.cs  LightController.cs  SmartDevice.cs  TVController.cs  WashingMachineController.cs
UnitySimulation/Assets/Scripts/Devices/: ACController.cs  FanController.cs  FridgeController.cs  InductionController.cs  LightController.cs  TVController.cs  WashingMachineController.cs
UnitySimulation/Assets/TV/: TVDisplay.renderTexture
UnitySimulation/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
Website/: README.md  index.html
Website/assets/css/: main.css  style.css
Website/assets/js/: deviceManager.js  main.js  script.js
Website/controller/: index.html  v1.html
Website/remote/: index.html
mcp/: API.md  README.md  client.py  document_content.json  hello.py  mcp_server_config.json  pyproject.toml  serial_sender.py  server_api.py  ws_home.py
(+2 files in other folders)
