[project]
name = "home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.2",
    "websockets>=15.0.1",
]
